<resources>
    <string name="app_name">KiddieLogic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_manage_account">Manage Account</string>

    <!-- Strings related to login -->
    <string name="prompt_medical_no">No RM</string>
    <string name="prompt_message">Message</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_new_password">Confirm New Password</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email Address</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_send">Send</string>
    <string name="action_commit">Commit</string>
    <string name="action_save">Save</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirm_password">Password Tidak Sama</string>
    <string name="error_incorrect_password">No RM atau password tidak cocok</string>
    <string name="error_incorrect_medicalno_email">No RM dan Email tidak cocok</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
